MobileSkin: distorted images when too big (BugId:17826)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@46238 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/images.scss
+++ b/extensions/wikia/WikiaMobile/css/images.scss
@@ -18,9 +18,10 @@
 			margin: -10px auto 0 auto;
 			max-width: 300px;
 		}
-
-		.thumbimage {
-			max-width: 100%;
-		}
 	}
+}
+
+img {
+	max-width: 100%;
+	height: auto;
 }
